Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: ingress-wildcard-host

spec:

  rules:

  - host: "javaapplication.yoshitha.com"

    http:

      paths:

      - pathType: Prefix

        path: "/"

        backend:

          service:

            name: springapp

            port:

              number: 80
